grammar/grammar.c
/* A recursive-descent parser generated by peg 0.1.18 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 40
#line 1 "grammar.leg"


#include <stdio.h>
#include <string.h>
#include <assert.h>

#include "objects.h"

#define YYSTYPE oop


#ifndef YY_MALLOC
#define YY_MALLOC(C, N)		malloc(N)
#endif
#ifndef YY_REALLOC
#define YY_REALLOC(C, P, N)	realloc(P, N)
#endif
#ifndef YY_FREE
#define YY_FREE(C, P)		free(P)
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YYRELEASE
#define YYRELEASE	yyrelease
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yy->__begin= yy->__pos, 1)
#endif
#ifndef YY_END
#define YY_END		( yy->__end= yy->__pos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif
#ifndef YY_STACK_SIZE
#define YY_STACK_SIZE 128
#endif

#ifndef YY_BUFFER_SIZE
#define YY_BUFFER_SIZE 1024
#endif

#ifndef YY_PART

typedef struct _yycontext yycontext;
typedef void (*yyaction)(yycontext *yy, char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

struct _yycontext {
  char     *__buf;
  int       __buflen;
  int       __pos;
  int       __limit;
  char     *__text;
  int       __textlen;
  int       __begin;
  int       __end;
  int       __textmax;
  yythunk  *__thunks;
  int       __thunkslen;
  int       __thunkpos;
  YYSTYPE   __;
  YYSTYPE  *__val;
  YYSTYPE  *__vals;
  int       __valslen;
#ifdef YY_CTX_MEMBERS
  YY_CTX_MEMBERS
#endif
};

#ifdef YY_CTX_LOCAL
#define YY_CTX_PARAM_	yycontext *yyctx,
#define YY_CTX_PARAM	yycontext *yyctx
#define YY_CTX_ARG_	yyctx,
#define YY_CTX_ARG	yyctx
#ifndef YY_INPUT
#define YY_INPUT(yy, buf, result, max_size)		\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#else
#define YY_CTX_PARAM_
#define YY_CTX_PARAM
#define YY_CTX_ARG_
#define YY_CTX_ARG
yycontext _yyctx= { 0, 0 };
yycontext *yyctx= &_yyctx;
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#endif

YY_LOCAL(int) yyrefill(yycontext *yy)
{
  int yyn;
  while (yy->__buflen - yy->__pos < 512)
    {
      yy->__buflen *= 2;
      yy->__buf= (char *)YY_REALLOC(yy, yy->__buf, yy->__buflen);
    }
#ifdef YY_CTX_LOCAL
  YY_INPUT(yy, (yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#else
  YY_INPUT((yy->__buf + yy->__pos), yyn, (yy->__buflen - yy->__pos));
#endif
  if (!yyn) return 0;
  yy->__limit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(yycontext *yy)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  ++yy->__pos;
  return 1;
}

YY_LOCAL(int) yymatchChar(yycontext *yy, int c)
{
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  if ((unsigned char)yy->__buf[yy->__pos] == c)
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(yy, %c) @ %s\n", c, yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(int) yymatchString(yycontext *yy, const char *s)
{
  int yysav= yy->__pos;
  while (*s)
    {
      if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
      if (yy->__buf[yy->__pos] != *s)
        {
          yy->__pos= yysav;
          return 0;
        }
      ++s;
      ++yy->__pos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(yycontext *yy, unsigned char *bits)
{
  int c;
  if (yy->__pos >= yy->__limit && !yyrefill(yy)) return 0;
  c= (unsigned char)yy->__buf[yy->__pos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yy->__pos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yy->__buf+yy->__pos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yy->__buf+yy->__pos));
  return 0;
}

YY_LOCAL(void) yyDo(yycontext *yy, yyaction action, int begin, int end)
{
  while (yy->__thunkpos >= yy->__thunkslen)
    {
      yy->__thunkslen *= 2;
      yy->__thunks= (yythunk *)YY_REALLOC(yy, yy->__thunks, sizeof(yythunk) * yy->__thunkslen);
    }
  yy->__thunks[yy->__thunkpos].begin=  begin;
  yy->__thunks[yy->__thunkpos].end=    end;
  yy->__thunks[yy->__thunkpos].action= action;
  ++yy->__thunkpos;
}

YY_LOCAL(int) yyText(yycontext *yy, int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yy->__textlen < (yyleng + 1))
	{
	  yy->__textlen *= 2;
	  yy->__text= (char *)YY_REALLOC(yy, yy->__text, yy->__textlen);
	}
      memcpy(yy->__text, yy->__buf + begin, yyleng);
    }
  yy->__text[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(yycontext *yy)
{
  int pos;
  for (pos= 0;  pos < yy->__thunkpos;  ++pos)
    {
      yythunk *thunk= &yy->__thunks[pos];
      int yyleng= thunk->end ? yyText(yy, thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yy->__text));
      thunk->action(yy, yy->__text, yyleng);
    }
  yy->__thunkpos= 0;
}

YY_LOCAL(void) yyCommit(yycontext *yy)
{
  if ((yy->__limit -= yy->__pos))
    {
      memmove(yy->__buf, yy->__buf + yy->__pos, yy->__limit);
    }
  yy->__begin -= yy->__pos;
  yy->__end -= yy->__pos;
  yy->__pos= yy->__thunkpos= 0;
}

YY_LOCAL(int) yyAccept(yycontext *yy, int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone(yy);
      yyCommit(yy);
    }
  return 1;
}

YY_LOCAL(void) yyPush(yycontext *yy, char *text, int count)
{
  yy->__val += count;
  while (yy->__valslen <= yy->__val - yy->__vals)
    {
      long offset= yy->__val - yy->__vals;
      yy->__valslen *= 2;
      yy->__vals= (YYSTYPE *)YY_REALLOC(yy, yy->__vals, sizeof(YYSTYPE) * yy->__valslen);
      yy->__val= yy->__vals + offset;
    }
}
YY_LOCAL(void) yyPop(yycontext *yy, char *text, int count)   { yy->__val -= count; }
YY_LOCAL(void) yySet(yycontext *yy, char *text, int count)   { yy->__val[count]= yy->__; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yy, yythunkpos0)

YY_RULE(int) yy_end_of_line(yycontext *yy); /* 40 */
YY_RULE(int) yy_comment(yycontext *yy); /* 39 */
YY_RULE(int) yy_space(yycontext *yy); /* 38 */
YY_RULE(int) yy_braces(yycontext *yy); /* 37 */
YY_RULE(int) yy_range(yycontext *yy); /* 36 */
YY_RULE(int) yy_char(yycontext *yy); /* 35 */
YY_RULE(int) yy_END(yycontext *yy); /* 34 */
YY_RULE(int) yy_BEGIN(yycontext *yy); /* 33 */
YY_RULE(int) yy_DOT(yycontext *yy); /* 32 */
YY_RULE(int) yy_class(yycontext *yy); /* 31 */
YY_RULE(int) yy_literal(yycontext *yy); /* 30 */
YY_RULE(int) yy_CLOSE(yycontext *yy); /* 29 */
YY_RULE(int) yy_OPEN(yycontext *yy); /* 28 */
YY_RULE(int) yy_ruleCallIdent(yycontext *yy); /* 27 */
YY_RULE(int) yy_COLON(yycontext *yy); /* 26 */
YY_RULE(int) yy_PLUS(yycontext *yy); /* 25 */
YY_RULE(int) yy_STAR(yycontext *yy); /* 24 */
YY_RULE(int) yy_QUERY(yycontext *yy); /* 23 */
YY_RULE(int) yy_primary(yycontext *yy); /* 22 */
YY_RULE(int) yy_NOT(yycontext *yy); /* 21 */
YY_RULE(int) yy_suffix(yycontext *yy); /* 20 */
YY_RULE(int) yy_AND(yycontext *yy); /* 19 */
YY_RULE(int) yy_action(yycontext *yy); /* 18 */
YY_RULE(int) yy_TILDE(yycontext *yy); /* 17 */
YY_RULE(int) yy_prefix(yycontext *yy); /* 16 */
YY_RULE(int) yy_error(yycontext *yy); /* 15 */
YY_RULE(int) yy_BAR(yycontext *yy); /* 14 */
YY_RULE(int) yy_sequence(yycontext *yy); /* 13 */
YY_RULE(int) yy_SEMICOLON(yycontext *yy); /* 12 */
YY_RULE(int) yy_expression(yycontext *yy); /* 11 */
YY_RULE(int) yy_EQUAL(yycontext *yy); /* 10 */
YY_RULE(int) yy_identifier(yycontext *yy); /* 9 */
YY_RULE(int) yy_RPERCENT(yycontext *yy); /* 8 */
YY_RULE(int) yy_end_of_file(yycontext *yy); /* 7 */
YY_RULE(int) yy_trailer(yycontext *yy); /* 6 */
YY_RULE(int) yy_definition(yycontext *yy); /* 5 */
YY_RULE(int) yy_declaration(yycontext *yy); /* 4 */
YY_RULE(int) yy_root(yycontext *yy); /* 3 */
YY_RULE(int) yy__(yycontext *yy); /* 2 */
YY_RULE(int) yy_grammar(yycontext *yy); /* 1 */

YY_ACTION(void) yy_1_action(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_action\n"));
  {
#line 86
   __ = newAction(yytext, nil); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_class(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_class\n"));
  {
#line 77
   __ = newCharacterClass(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_literal(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_literal\n"));
  {
#line 75
   __ = newStringEscaped(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_literal(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_literal\n"));
  {
#line 74
   __ = newStringEscaped(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_ruleCallIdent(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_ruleCallIdent\n"));
  {
#line 72
   __ = newIdentifier(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_1_identifier(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_identifier\n"));
  {
#line 70
   __ = newStringEscaped(yytext); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_9_primary(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define c yy->__val[-2]
#define l yy->__val[-3]
#define e yy->__val[-4]
#define i yy->__val[-5]
#define i2 yy->__val[-6]
#define i1 yy->__val[-7]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_9_primary\n"));
  {
#line 68
   __ = newEnd(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
#undef c
#undef l
#undef e
#undef i
#undef i2
#undef i1
}
YY_ACTION(void) yy_8_primary(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define c yy->__val[-2]
#define l yy->__val[-3]
#define e yy->__val[-4]
#define i yy->__val[-5]
#define i2 yy->__val[-6]
#define i1 yy->__val[-7]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_8_primary\n"));
  {
#line 67
   __ = newBegin(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
#undef c
#undef l
#undef e
#undef i
#undef i2
#undef i1
}
YY_ACTION(void) yy_7_primary(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define c yy->__val[-2]
#define l yy->__val[-3]
#define e yy->__val[-4]
#define i yy->__val[-5]
#define i2 yy->__val[-6]
#define i1 yy->__val[-7]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_7_primary\n"));
  {
#line 66
   __ = a; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
#undef c
#undef l
#undef e
#undef i
#undef i2
#undef i1
}
YY_ACTION(void) yy_6_primary(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define c yy->__val[-2]
#define l yy->__val[-3]
#define e yy->__val[-4]
#define i yy->__val[-5]
#define i2 yy->__val[-6]
#define i1 yy->__val[-7]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_6_primary\n"));
  {
#line 65
   __ = newDot(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
#undef c
#undef l
#undef e
#undef i
#undef i2
#undef i1
}
YY_ACTION(void) yy_5_primary(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define c yy->__val[-2]
#define l yy->__val[-3]
#define e yy->__val[-4]
#define i yy->__val[-5]
#define i2 yy->__val[-6]
#define i1 yy->__val[-7]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_5_primary\n"));
  {
#line 64
   __ = c; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
#undef c
#undef l
#undef e
#undef i
#undef i2
#undef i1
}
YY_ACTION(void) yy_4_primary(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define c yy->__val[-2]
#define l yy->__val[-3]
#define e yy->__val[-4]
#define i yy->__val[-5]
#define i2 yy->__val[-6]
#define i1 yy->__val[-7]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_4_primary\n"));
  {
#line 63
   __ = l; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
#undef c
#undef l
#undef e
#undef i
#undef i2
#undef i1
}
YY_ACTION(void) yy_3_primary(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define c yy->__val[-2]
#define l yy->__val[-3]
#define e yy->__val[-4]
#define i yy->__val[-5]
#define i2 yy->__val[-6]
#define i1 yy->__val[-7]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_primary\n"));
  {
#line 62
   __ = e; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
#undef c
#undef l
#undef e
#undef i
#undef i2
#undef i1
}
YY_ACTION(void) yy_2_primary(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define c yy->__val[-2]
#define l yy->__val[-3]
#define e yy->__val[-4]
#define i yy->__val[-5]
#define i2 yy->__val[-6]
#define i1 yy->__val[-7]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_primary\n"));
  {
#line 61
   __ = i; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
#undef c
#undef l
#undef e
#undef i
#undef i2
#undef i1
}
YY_ACTION(void) yy_1_primary(yycontext *yy, char *yytext, int yyleng)
{
#define a yy->__val[-1]
#define c yy->__val[-2]
#define l yy->__val[-3]
#define e yy->__val[-4]
#define i yy->__val[-5]
#define i2 yy->__val[-6]
#define i1 yy->__val[-7]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_primary\n"));
  {
#line 60
   __ = newAssignment(i1, i2); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef a
#undef c
#undef l
#undef e
#undef i
#undef i2
#undef i1
}
YY_ACTION(void) yy_4_suffix(yycontext *yy, char *yytext, int yyleng)
{
#define p yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_4_suffix\n"));
  {
#line 58
   __ = p; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef p
}
YY_ACTION(void) yy_3_suffix(yycontext *yy, char *yytext, int yyleng)
{
#define p yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_suffix\n"));
  {
#line 57
   p = newPlus(p); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef p
}
YY_ACTION(void) yy_2_suffix(yycontext *yy, char *yytext, int yyleng)
{
#define p yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_suffix\n"));
  {
#line 56
   p = newStar(p); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef p
}
YY_ACTION(void) yy_1_suffix(yycontext *yy, char *yytext, int yyleng)
{
#define p yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_suffix\n"));
  {
#line 55
   p = newOptional(p); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef p
}
YY_ACTION(void) yy_3_prefix(yycontext *yy, char *yytext, int yyleng)
{
#define s yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_3_prefix\n"));
  {
#line 41
   __ = s; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef s
}
YY_ACTION(void) yy_2_prefix(yycontext *yy, char *yytext, int yyleng)
{
#define s yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_prefix\n"));
  {
#line 40
   __ = newNot(s); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef s
}
YY_ACTION(void) yy_1_prefix(yycontext *yy, char *yytext, int yyleng)
{
#define s yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_prefix\n"));
  {
#line 39
   __ = newAnd(s); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef s
}
YY_ACTION(void) yy_1_error(yycontext *yy, char *yytext, int yyleng)
{
#define p yy->__val[-1]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_error\n"));
  {
#line 35
   __ = p; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef p
}
YY_ACTION(void) yy_2_sequence(yycontext *yy, char *yytext, int yyleng)
{
#define f yy->__val[-1]
#define e yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_sequence\n"));
  {
#line 33
   __ = e; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef f
#undef e
}
YY_ACTION(void) yy_1_sequence(yycontext *yy, char *yytext, int yyleng)
{
#define f yy->__val[-1]
#define e yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_sequence\n"));
  {
#line 32
   e = newSequence(e, f); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef f
#undef e
}
YY_ACTION(void) yy_2_expression(yycontext *yy, char *yytext, int yyleng)
{
#define s2 yy->__val[-1]
#define s1 yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_expression\n"));
  {
#line 28
   __ = s1; ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef s2
#undef s1
}
YY_ACTION(void) yy_1_expression(yycontext *yy, char *yytext, int yyleng)
{
#define s2 yy->__val[-1]
#define s1 yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_expression\n"));
  {
#line 27
   s1 = newAlternation(s1, s2); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef s2
#undef s1
}
YY_ACTION(void) yy_1_definition(yycontext *yy, char *yytext, int yyleng)
{
#define e yy->__val[-1]
#define i yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_definition\n"));
  {
#line 24
   __ = newDefinition(i, e); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef e
#undef i
}
YY_ACTION(void) yy_1_root(yycontext *yy, char *yytext, int yyleng)
{
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_root\n"));
  {
#line 18
   __ = newGrammar(); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
}
YY_ACTION(void) yy_2_grammar(yycontext *yy, char *yytext, int yyleng)
{
#define d yy->__val[-1]
#define r yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_2_grammar\n"));
  {
#line 16
   printTree(r); /*writeTree(r);*/ ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef d
#undef r
}
YY_ACTION(void) yy_1_grammar(yycontext *yy, char *yytext, int yyleng)
{
#define d yy->__val[-1]
#define r yy->__val[-2]
#define __ yy->__
#define yypos yy->__pos
#define yythunkpos yy->__thunkpos
  yyprintf((stderr, "do yy_1_grammar\n"));
  {
#line 14
   Object_push(r, d); ;
  }
#undef yythunkpos
#undef yypos
#undef yy
#undef d
#undef r
}
